# jfm

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: 01_user_filtering.jfm  02_sales_analytics.jfm  03_data_transformation.jfm  04_test_data_generation.jfm  05_api_response_processing.jfm  06_pattern_matching.jfm  07_complex_query.jfm  08_module_example.jfm  sample.jfm
src/: ast.rs  cli.rs  config.rs  convert.rs  diagnostic.rs  format.rs  interpreter.rs  json.rs  lexer.rs  lib.rs  main.rs  token.rs  value.rs
src/interpreter/: builtins.rs  control_flow.rs  environment.rs  error.rs  evaluator.rs  mod.rs  parser.rs  value_utils.rs
src/interpreter/builtins/: array.rs  generators.rs  io.rs  math.rs  misc.rs  mod.rs  object.rs  string.rs  types.rs
tests/: cli.rs  complex.rs  control_flow.rs  easy.rs  edge_cases.rs  errors.rs  fixture_runner.rs  functions.rs  generators.rs  include.rs  io.rs  medium.rs  operators.rs  stress.rs  templates.rs  v2_features.rs
tests/common/: mod.rs
tests/fixtures/complex_data_transformer/: expected.json  input.json  query.jfm
tests/fixtures/deep_nested_array_extraction/: expected.json  input.json  query.jfm
tests/fixtures/nested_extraction/: expected.json  input.json  query.jfm
tests/fixtures/pipe_update_complex/: expected.json  input.json  query.jfm
tests/fixtures/projection_shorthand/: expected.json  input.json  query.jfm
tests/fixtures/recursive_calculation/: query.jfm
tests/fixtures/simple_filter/: expected.json  query.jfm
tests/integration/: builtins.rs  core.rs  features.rs  modules.rs
