[package]
name = "jfm"
version = "1.2.1"
edition = "2024"
description = "A JSON query language interpreter"
authors = ["Jakraes"]
license = "MIT"
repository = "https://github.com/Jakraes/jfm"
keywords = ["json", "query", "cli", "filter", "jq"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"

[dependencies]
chumsky = "0.12.0"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.2"
owo-colors = "4.0.0"
atty = "0.2"
indexmap = "2.13.0"
serde_json = "1.0"
rand = "0.8"
